--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
  <p style="text-align:center;"><strong>[ 你若盛开，蝴蝶自来 ]</strong></p>
  <br/>
  <br/>
- <p style="text-align:center;"><strong><a href="http://www.biib.cn">彼爱(BiiB)</a> : It is a website for literary communication, emotional communication, material download, quality recommendation and life sharing.</strong></p>
+ <p style="text-align:center;"><strong><a href="http://www.biib.cn">彼爱(BiiB)</a> : It is a website for literary communication, emotional communication, material download, commodity recommendation and life sharing.</strong></p>
  <br/>
- <p style="text-align:center;"><strong>Please enter official website : <a href="http://www.biib.cn">http://www.biib.cn </a></strong></p>
+ <p style="text-align:center;"><strong>Please go to offical website : <a href="http://www.biib.cn">http://www.biib.cn </a></strong></p>
   <br/>
  <p style="text-align:center;"><strong>[ If you are blossoming , butterflies will visit you without being invited ]</strong></p>
 </body>
